Revert "start of scrollbar fix"
This reverts commit 949ddaf68af4daa0115232cff7689bd7e7b57447.

--- a/CSS/header.css
+++ b/CSS/header.css
@@ -4,7 +4,6 @@ Header
 
 #Header-Section {
   display: flex;
-  height: 22vh;
 }
 
 /*====================================
@@ -116,7 +115,10 @@ header {
     DROP-MENU EFFECTS (LARGER SCREENS)
   ====================================*/
     /* Resets dropdown styles to not affect the effects. Overflow still set to hidden allows for menu effects like sliding in */
-
+      .fade-in .menu-button {
+        transition: opacity .5s;
+        opacity: 0;
+      }
       .dropdown-wrapper:hover .fade-in .menu-button {
         opacity: 1;
       }
